1995-11-05  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c: tuned for bsd44 curses

	* src/dedview.c: additional fix for bsd44 curses

	* src/dedline.c: bsd43 curses wraps when I printw to 80th column

	* src/dedview.c: bsd43 curses wraps when I printw to the 80th column

	* src/version.h: mods to prevent tilde-expansion in list-entries

	* src/ded.c, src/dedring.c, src/deddoit.c, src/dedscan.c:
	tilde-expansion

	* src/version.h:
	mods to handle/display control characters better in shell
	commands. mods to make workspace pager scroll by single
	lines. mods to display in 80th column. mods to use 'const',
	and dyn_string() to cut down on data+bss sections.

	* src/ftree.c: use 'const' & 'dyn_string()' to cut down on data+bss

	* src/dlog.c: cut down on data-section

	* src/dedcolor.c: use 'const'

	* src/dedscan.c: cut down on data-section

	* src/dedring.c: cut down on data section

	* src/dedmsgs.c: cut down on data-section

	* src/ded.h: use 'const' for identifier

	* src/sortset.c: use 'const'

	* src/dedline.c: use 80th column

1995-11-04  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c: dropped SYS5_CURSES definition

1995-11-02  Thomas E. Dickey  <dickey@clark.net>

	* src/dedview.c: use 80th column

1995-11-01  Thomas E. Dickey  <dickey@clark.net>

	* user/ded.man: documented changes to dedtype.c

	* src/dedtype.c:
	rewrote to allow single-row scrolling, and to use 80th column

1995-10-29  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c: added guard for getwd failure in 'do_find()'

1995-10-21  Thomas E. Dickey  <dickey@clark.net>

	* src/dedshow.c:
	show escaped chars in printable form, so that when we echo a command
	with escaped tabs, carriage returns, we'll see them.

1995-09-05  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c: tweaked interaction between '&' and all_show

	* src/ftree.c: use MODULE_ID

1995-09-04  Thomas E. Dickey  <dickey@clark.net>

	* user/ded.man: updated

	* src/version.h: