@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19951105
+MANIFEST for ded, version t19951106
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
