@@ -1,3 +1,11 @@
+1995-11-06  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/dedview.c:
+	hack to make ncurses 1.8.7 work (another place where clrtoeol() was getting
+	loose)
+
+	* src/ded.h: moved the rcs-ident so 'const' will be defined in config.h
+
 1995-11-05  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/dedview.c: tuned for bsd44 curses
